--- a/Form1.html
+++ b/Form1.html
@@ -5,11 +5,34 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+<style >
+img{
+max-width: 100%;
+max-height: 100%;
+object-fit: cover;
+
+}
+.menu-food-item{
+width: 200px;
+height: 300px;
+text-align: center;
+}
+
+</style>
+
+		
+
+
+
+
 </head>
 <link rel="stylesheet" type="text/css" href="SS.css">
 <!---fonto-->
 <script src="https://fontawesome.com/c5ce41bef7.js"crossrogin="anonymous"></script>
 <body>
+	
+
+
 	<div class="parent-container">
 		<!--navbar start-->
 		<nav class="navbar">
@@ -47,12 +70,11 @@
 </div>
 	
 	<!---</div class="icoon">
-	<i class="fa-solid fa-cart-shopping"></i>
+	<i class="fa-solid fa-cart-shopping"></i> 
 	<i class="fa-solid fa-heart"></i></div>--->
 <div class="menu-food-item">
-	<img src="assets/pizza 1.jpg" alt="" srcset="">
+	<img src="assets/pizza 2.jpg" alt="" srcset="">
 </div>
-	
 
 	<!---</div class="icoon">
 	<i class="fa-solid fa-cart-shopping"></i>
@@ -60,7 +82,8 @@
 
 
 <div class="menu-food-item">
-	<img src="assets/pizza 1.jpg" alt="" srcset="">
+	<img src="assets/pizza 3.jpg" alt="" srcset="">
+
 	
 
 	<!---</div class="icoon">
@@ -69,7 +92,7 @@
 
 </div>
 <div class="menu-food-item">
-	<img src="assets/pizza 1.jpg" alt="" srcset="">
+	<img src="assets/pizza 4.jpg" alt="" srcset="">
 	
 	<!---</div class="icoon">
 	<i class="fa-solid fa-cart-shopping"></i>
@@ -79,7 +102,18 @@
 </div>
 
 <div class="menu-food-item">
-	<img src="assets/pizza 1.jpg" alt="" srcset="" >
+	
+	<img src="assets/pizza 5.jpg" alt="" srcset="" >
+	
+
+	<!---</div class="icoon">
+	<i class="fa-solid fa-cart-shopping"></i>
+	<i class="fa-solid fa-heart"></i></div>--->
+
+</div>
+<div class="menu-food-item">
+	<img src="assets/pizza 6.jpg" alt="" srcset="">
+
 	
 
 	<!---</div class="icoon">
@@ -89,7 +123,7 @@
 
 </div>
 <div class="menu-food-item">
-	<img src="assets/pizza 1.jpg" alt="" srcset="">
+	<img src="assets/pizza 6.jpg" alt="" srcset="">
 
 	
 
@@ -116,14 +150,32 @@
 <section class="about">
 	<div>
 		<h1 class="title">About</h1>
-		<p></p>
+		<p>A wide range of restaurants serving premium pizza, smoothies, wine, . Grab a snack on the go or sit down and spent all night. Delicious food. Good company. Refreshing drinks. Palvelut: Quality restaurants.</p>
 	</div>
 	
 
 
 </section>
 <!---about end --->
+<!---services start--->
+<section class="Services" id="Services">
+<h1 class="title">Services</h1>
+<div class="parent-Services">
 
+<div>		
+<img src="assets/icon1.svg">
+<h1 class="title">Delivery is Fsater</h1>
+</div>
+<div>	
+<img src="assets/icon2.svg">
+<h1 class="title">Delivery is Fsater</h1>
+</div>
+<div>		
+<img src="assets/icon3.svg">
+<h1 class="title">Delivery is Fsater</h1>
+</div>
+</div>
+</section>
 </div>
 </body>
 </html>
