--- a/Form1.html
+++ b/Form1.html
@@ -176,6 +176,29 @@ text-align: center;
 </div>
 </div>
 </section>
+<!---Server end--->
+<!---Contact start-->
+<section class="contact">
+	<h1 class="title">Contact</h1>
+<form>
+	<div class="parent-inputs">
+	<input type="text" placeholder= "Full Name">
+	<input type="text" placeholder= "Email">
+	<input type="text" placeholder= "Phone Number">
+</div>
+<div class="parent-inputs">
+	<input type="text" placeholder= "Massage..."class="Massage">
+	<input type="Sumbit"value="Send">
+	
+</div>
+
+
+</form>
+	
+</section>
+
+<!---Contact end-->
+
 </div>
 </body>
 </html>
