--- a/Form1.html
+++ b/Form1.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>AMAL RESTURANT</title>
+	<script src="https://fontawesome.com/kits/c5ce41bef7/setup"crossrogin="anonymous"></script>
+	<!--AOS-->
+
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <style >
 img{
 max-width: 100%;
@@ -28,7 +32,7 @@ text-align: center;
 </head>
 <link rel="stylesheet" type="text/css" href="SS.css">
 <!---fonto-->
-<script src="https://fontawesome.com/c5ce41bef7.js"crossrogin="anonymous"></script>
+
 <body>
 	
 
@@ -56,7 +60,7 @@ text-align: center;
 	<!--banner start==main start-->
 	<main class="banner" id="home">
 		
-	<h1>Welcome in <br>Amal resturant
+	<h1 data-aos="flip-right">Welcome in <br>Amal resturant
 	</h1>
 	</main>	
 	<!---main start--->
@@ -65,14 +69,14 @@ text-align: center;
 		Menu
 	</h1>
 	<div class="parent-menu">
-	<div class="menu-food-item">
+	<div class="menu-food-item" data-aos="flip-right">
 	<img src="assets/pizza 1.jpg" alt="" srcset="">
 </div>
 	
 	<!---</div class="icoon">
 	<i class="fa-solid fa-cart-shopping"></i> 
 	<i class="fa-solid fa-heart"></i></div>--->
-<div class="menu-food-item">
+<div class="menu-food-item" data-aos="zoom-in">
 	<img src="assets/pizza 2.jpg" alt="" srcset="">
 </div>
 
@@ -81,7 +85,7 @@ text-align: center;
 	<i class="fa-solid fa-heart"></i></div>--->
 
 
-<div class="menu-food-item">
+<div class="menu-food-item" data-aos="flip-left">
 	<img src="assets/pizza 3.jpg" alt="" srcset="">
 
 	
@@ -91,7 +95,7 @@ text-align: center;
 	<i class="fa-solid fa-heart"></i></div--->
 
 </div>
-<div class="menu-food-item">
+<div class="menu-food-item" data-aos="flip-left">
 	<img src="assets/pizza 4.jpg" alt="" srcset="">
 	
 	<!---</div class="icoon">
@@ -101,7 +105,7 @@ text-align: center;
 
 </div>
 
-<div class="menu-food-item">
+<div class="menu-food-item"data-aos="flip-left">
 	
 	<img src="assets/pizza 5.jpg" alt="" srcset="" >
 	
@@ -111,7 +115,7 @@ text-align: center;
 	<i class="fa-solid fa-heart"></i></div>--->
 
 </div>
-<div class="menu-food-item">
+<div class="menu-food-item"data-aos="zoom-in">
 	<img src="assets/pizza 6.jpg" alt="" srcset="">
 
 	
@@ -122,7 +126,7 @@ text-align: center;
 
 
 </div>
-<div class="menu-food-item">
+<div class="menu-food-item" data-aos="flip-left">
 	<img src="assets/pizza 6.jpg" alt="" srcset="">
 
 	
@@ -148,7 +152,7 @@ text-align: center;
 <!---main end-->
 <!---about start--->
 <section class="about">
-	<div>
+	<div data-aos="flip-up">
 		<h1 class="title">About</h1>
 		<p>A wide range of restaurants serving premium pizza, smoothies, wine, . Grab a snack on the go or sit down and spent all night. Delicious food. Good company. Refreshing drinks. Palvelut: Quality restaurants.</p>
 	</div>
@@ -162,15 +166,15 @@ text-align: center;
 <h1 class="title">Services</h1>
 <div class="parent-Services">
 
-<div>		
+<div data-aos="flip-right">		
 <img src="assets/icon1.svg">
 <h1 class="title">Delivery is Fsater</h1>
 </div>
-<div>	
+<div data-aos="flip-right">	
 <img src="assets/icon2.svg">
 <h1 class="title">Delivery is Fsater</h1>
 </div>
-<div>		
+<div data-aos="flip-right">	
 <img src="assets/icon3.svg">
 <h1 class="title">Delivery is Fsater</h1>
 </div>
@@ -180,7 +184,7 @@ text-align: center;
 <!---Contact start-->
 <section class="contact">
 	<h1 class="title">Contact</h1>
-<form>
+<form data-aos="zoom-in">
 	<div class="parent-inputs">
 	<input type="text" placeholder= "Full Name">
 	<input type="text" placeholder= "Email">
@@ -198,7 +202,24 @@ text-align: center;
 </section>
 
 <!---Contact end-->
+<!--footer start--->
+<footer>
+	<p>Copyrigh@
+	<a>AMAL</a>
+	2023
+</p>
+<a id="whatsapp">
+<i class="fa-brands fa-whatsapp"></i>
 
++905527927578
+</a>
+</footer>
+<!--footer end--->
 </div>
+<!--AOS-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({duration:2000});
+</script>
 </body>
 </html>
