--- a/Form1.html
+++ b/Form1.html
@@ -71,7 +71,7 @@ width: 25%;
 	<!--banner start==main start-->
 	<main class="banner" id="home">
 		
-	<h1 data-aos="flip-right">Welcome in <br>Amal resturant
+	<h1 data-aos="flip-right">Welcome to <br>Abdul Wahid Family Restaurant
 	</h1>
 	</main>	
 	<!---main start--->
@@ -81,14 +81,14 @@ width: 25%;
 	</h1>
 	<div class="parent-menu">
 	<div class="menu-food-item" data-aos="flip-right">
-	<img src="assets/pizza 1.jpg" alt="" srcset="" style="width: 20000px;height: 250px;">
+	<img src="assets/pizza 1.jpg" alt="" srcset="" style="width: 300px;height: 250px;">
 </div>
 	
 	<!---</div class="icoon">
 	<i class="fa-solid fa-cart-shopping"></i> 
 	<i class="fa-solid fa-heart"></i></div>--->
 <div class="menu-food-item" data-aos="zoom-in">
-	<img src="assets/pizza 2.jpg" alt="" srcset="" style="width: 20000px;height: 250px";>
+	<img src="assets/pizza 2.jpg" alt="" srcset="" style="width: 300px;height: 250px";>
 </div>
 
 	<!---</div class="icoon">
@@ -97,7 +97,7 @@ width: 25%;
 
 
 <div class="menu-food-item" data-aos="flip-left">
-	<img src="assets/pizza 3.jpg" alt="" srcset="" style="width: 20000px;height: 250px";>
+	<img src="assets/pizza 3.jpg" alt="" srcset="" style="width: 300px;height: 250px";>
 
 	
 
@@ -106,8 +106,8 @@ width: 25%;
 	<i class="fa-solid fa-heart"></i></div--->
 
 </div>
-<div class="menu-food-item" data-aos="flip-left">
-	<img src="assets/pizza 4.jpg" alt="" srcset="" style="width: 20000px;height: 250px";>
+<div class="menu-food-item" data-aos="flip-right">
+	<img src="assets/ham 4.jpg" alt="" srcset="" style="width: 300px;height: 250px";>
 	
 	<!---</div class="icoon">
 	<i class="fa-solid fa-cart-shopping"></i>
@@ -116,18 +116,18 @@ width: 25%;
 
 </div>
 
-<div class="menu-food-item"data-aos="flip-left">
-	
-	<img src="assets/pizza 5.jpg" alt="" srcset=""style="width: 20000px;height: 250px;" >
-	
-
-	<!---</div class="icoon">
-	<i class="fa-solid fa-cart-shopping"></i>
-	<i class="fa-solid fa-heart"></i></div>--->
-
-</div>
 <div class="menu-food-item"data-aos="zoom-in">
-	<img src="assets/pizza 6.jpg" alt="" srcset="" style="width: 20000px;height: 250px";>
+	
+	<img src="assets/ham 3.jpg" alt="" srcset=""style="width: 300px;height: 250px;" >
+	
+
+	<!---</div class="icoon">
+	<i class="fa-solid fa-cart-shopping"></i>
+	<i class="fa-solid fa-heart"></i></div>--->
+
+</div>
+<div class="menu-food-item"data-aos="flip-left">
+	<img src="assets/ham 2.jpg" alt="" srcset="" style="width: 300px;height: 250px";>
 
 	
 
@@ -159,7 +159,7 @@ width: 25%;
 <section class="about">
 	<div data-aos="flip-up">
 		<h1 class="title">About</h1>
-		<p>A wide range of restaurants serving premium pizza, smoothies, wine, . Grab a snack on the go or sit down and spent all night. Delicious food. Good company. Refreshing drinks. Palvelut: Quality restaurants.</p>
+		<p>A wide range of restaurants serving premium pizza, hambuger,Grab a snack on the go or sit down and spent all night. Delicious food. Good company. . Palvelut: Quality restaurants.</p>
 	</div>
 	
 
@@ -173,15 +173,15 @@ width: 25%;
 
 <div data-aos="flip-right">		
 <img src="assets/icon1.svg">
-<h1 class="title">Delivery is Fsater</h1>
+<h1 class="title">Delivery is Fast</h1>
 </div>
 <div data-aos="flip-right">	
 <img src="assets/icon2.svg">
-<h1 class="title">Delivery is Fsater</h1>
+<h1 class="title">Less Money</h1>
 </div>
 <div data-aos="flip-right">	
 <img src="assets/icon3.svg">
-<h1 class="title">Delivery is Fsater</h1>
+<h1 class="title">High Quality</h1>
 </div>
 </div>
 </section>
@@ -192,12 +192,12 @@ width: 25%;
 <form data-aos="zoom-in">
 	<div class="parent-inputs">
 	<input type="text" placeholder= "Full Name">
-	<input type="text" placeholder= "Email" required >
-	<input type="text" placeholder= "Phone Number">
+	<input type="text" placeholder= "Address" required >
+	<input type="text" placeholder= "Phone Number" size="11" maxlength="11">
 </div>
 <div class="parent-inputs">
 	<input type="text" placeholder= "Massage..."class="Massage">
-	<input type="Sumbit"value="Send">
+	<input type="Sumbit"value="Send" onclick="alert('Thank you for you Order');">;
 	
 </div>
 
