--- a/Menu.html
+++ b/Menu.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>AMAL RESTURANT</title>
 	<link rel="stylesheet"  href="all.min.css">
+	
+
 
 	<!--AOS-->
 
@@ -33,14 +36,14 @@ width: 25%;
 }
 
 </style>
+
 </head>
 <link rel="stylesheet" type="text/css" href="SS.css">
 <!---fonto-->
 
 <body>
+<link rel="stylesheet" type="text/css" href="SS.css">
 	
-
-
 	<div class="parent-container">
 		<!--navbar start-->
 		<nav class="navbar">
@@ -48,7 +51,7 @@ width: 25%;
 	<img src="assets/logo.jpg"alt="" srcset="">
 </div>
 <div class="navbar-links">
-<a href="./Form1.html">Home</a>
+	<a href="./Form1.html">Home</a>
 	<a href="./Menu.html">Menu
 	</a>
 	<a href="./about.html">About
@@ -60,12 +63,7 @@ width: 25%;
 	</div>
 	</nav>
 	<!--navbar end-->
-	<!--banner start==main start-->
-	<main class="banner" id="home">
-		
-	<h1 data-aos="flip-right">Welcome to <br>Abdul Wahid Family Restaurant
-	</h1>
-	</main>	
+	
 	<!---main start--->
 	<section class="menu" id="menu">
 	<h1 class="title">
@@ -165,59 +163,8 @@ width: 25%;
 </div>
 
 <!---main end-->
-<!---about start--->
-<section class="about">
-	<div data-aos="flip-up">
-		<h1 class="title">About</h1>
-		<p>A wide range of restaurants serving premium pizza, hambuger,Grab a snack on the go or sit down and spent all night. Delicious food. Good company. . Palvelut: Quality restaurants.</p>
-	</div>
-	
 
-
-</section>
-<!---about end --->
-<!---services start--->
-<section class="Services" id="Services">
-<h1 class="title">Services</h1>
-<div class="parent-Services">
-
-<div data-aos="flip-right">		
-<img src="assets/icon1.svg">
-<h1 class="title">Delivery is Fast</h1>
-</div>
-<div data-aos="flip-right">	
-<img src="assets/icon2.svg">
-<h1 class="title">Less Money</h1>
-</div>
-<div data-aos="flip-right">	
-<img src="assets/icon3.svg">
-<h1 class="title">High Quality</h1>
-</div>
-</div>
-</section>
-<!---Server end--->
-<!---Contact start-->
-<section class="contact">
-	<h1 class="title">Contact</h1>
-<form data-aos="zoom-in">
-	<div class="parent-inputs">
-	<input type="text" placeholder= "Full Name">
-	<input type="text" placeholder= "Address" required >
-	<input type="text" placeholder= "Phone Number" size="11" maxlength="11">
-</div>
-<div class="parent-inputs">
-	<input type="text" placeholder= "Massage..."class="Massage">
-	<input type="Sumbit"value="Send" onclick="alert('Thank you for you Order');">;
-	
-</div>
-
-
-</form>
-	
-</section>
-
-<!---Contact end-->
-<!--footer start--->
+<!----------g------------->
 <footer>
 	<p>Copyrigh@
 	<a>AMAL</a>
@@ -228,12 +175,11 @@ width: 25%;
 +905527927578
 </a>
 </footer>
-<!--footer end--->
-</div>
+		
 <!--AOS-->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init({duration:2000});
 </script>
 </body>
-</html>
+</html>	
